2005-04-10  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (BUILT_SOURCES_CLEAN): Add package_revision.txt.

	This is the 0.18 release.

2005-04-11  Matthew Gregan <kinetik@orcon.net.nz>

	* unix/inodeprint.cc, configure.ac: Use nanosecond time resolution for
	inodeprints on BSDs and other platforms if available.

2005-04-10  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am: Use pdftops instead of acroread.
	(EXTRA_DIST): Include new contrib/ files, and fix wildcards.
	* NEWS: Update for 0.18.
	* configure.ac: Bump version number.
	* debian/changelog: Mention new release.
	* debian/copyright: Update from AUTHORS.
	* monotone.spec: Mention new release.
	* po/monotone.pot: Regenerate.

2005-04-10  Florian Weimer  <fw@deneb.enyo.de>

	* monotone.texi (Commands): Use "working copy" instead of "working
	directory", to match the rest of the manual.

2005-04-10  Florian Weimer  <fw@deneb.enyo.de>

	* commands.cc (ls_known): New function which prints all known
	files in the working copy.
	(CMD(list)): Invoke ls_known for "list known".  Update help
	message.
	(ALIAS(ls)): Update help message.

	* monotone.texi: Document "list known".
	* tests/t_ls_known.at: New file.
	* testsuite.at: Include it.

2005-04-10  Richard Levitte  <richard@levitte.org>

	* contrib/Notify.pl: Count the number of messages sent, and
	display the count at the end.
	Version bumped to 1.0.

2005-04-10  Matt Johnston  <matt@ucc.asn.au>

	* unix/inodeprint.cc, configure.ac: don't use the nsec time
	on non-Linux-style systems (quick compile fix for OS X and probably
	others, can be made generic later).

2005-04-10  Olivier Andrieu  <oliv__a@users.sourceforge.net>

	* contrib/monotone.el: Some elisp code for running monotone from
	inside Emacs. Supports diff, status, add, drop, revert and commit.

2005-04-09  Richard Levitte  <richard@levitte.org>

	* contrib/Notify.pl: Allow globbing branches.  Make the revision
	records branch specific.  Show what records you would have updated